adicionando as imagens

--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
             <div class="texto-animado">
                 <h3>Estou em busca de me tornara um programador</h3>
                 
-                <p>Sou Pedro, estudante de Ciências da Computação, estou no meu 1º período. Sou esforçado e desde que me conheço por gente, sempre gostei do meio da tecnologia e sempre fui muito entusiasmado para aprender sobre. Comecei com meus primeiros protótipos de sites front-end ainda no ensino médio, com curso em vídeo. Logo após, fui buscando mais conhecimento, e sempre fui uma pessoa bem curiosa que quer saber sobre tudo. Não só sou curioso como também um pouco inovador, gosto de entender tudo ao meu redor, não só os objetos como as pessoas também. Sei ser uma pessoa empática, e também sou centrado quando tenho alguma atividade. Estou à procura de um emprego para poder ajudar meus familiares e ter minha independência financeira.</p>
+                <p>Sou Pedro, estudante de Ciências da Computação no 1º período e atualmente cursando Análise e Desenvolvimento de
+                    Sistemas pelo Embarque Digital. Desde o ensino médio, desenvolvi uma paixão maior por tecnologia, e tenho me
+                    dedicado a aprender e criar soluções inovadoras</p>
             
                 <div class="btn-box">
                     <a href="https://github.com/Pedro-Priori" class="">veja meus projetos e repositorios</a>
